test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-exclude-namespace/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app2
spec:
  validationFailureAction: Audit
  rules:
    - name: check-label-app
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - default
      validate:
        cel:
          expressions:
            - expression: "'app' in object.metadata.labels"
